...
        "Additional Options": "其它选项",
        "Address": "地址",
        "Address Bar": "地址栏",
        "After you close a tab, Reynard won't remember any of your browsing history or cookies. However, downloads and new bookmarks will be saved.": "关闭标签页后，Reynard 不会记录你的浏览历史或 Cookie，但下载的文件和新建的书签仍会保留。",
        "All Website": "所有网站",
        "All history": "全部历史记录",
        "Appearance": "外观",
        "Autoplay": "自动播放",
        "Blank Page": "空白页",
        "Bookmarks": "书签",
        "Bottom": "底部",
        "Browsing": "浏览",
        "Cancel": "取消",
...
        "Delete": "删除",
        "Delete Bookmark": "删除书签",
        "Delete Folder": "删除文件夹",
        "Deleted": "已删除",
        "Do you want to stop downloading %@?": "要停止下载“%@”吗？",
        "Done": "完成",
        "Downloads": "下载",
        "Engine Version": "引擎版本",
        "Edit Bookmark": "编辑书签",
        "Edit Bookmarks": "编辑书签",
        "Edit": "编辑",
        "Favorites": "收藏",
        "Files you download appear here": "下载的文件会显示在这里",
...
        "Search Engine": "搜索引擎",
        "Search Opened Tabs": "搜索已打开标签页",
        "Search Suggestion Provider": "搜索建议提供方",
        "Search Suggestions": "搜索建议",
        "Save to Photos": "保存到照片",
        "Save": "保存",
        "Settings": "设置",
        "Show Full Website Address": "显示完整网站地址",
        "Show All": "显示全部",
        "Show Image Previews": "显示图片预览",
        "Show in Private Browsing": "在无痕浏览中显示",
        "Show Link Previews": "显示链接预览",
        "Show Less": "收起",
...
